experimental/ir/testdata/extend/invalid_partial.proto.stderr.txt
error: cannot find `M.N` in this scope
  --> testdata/extend/invalid_partial.proto:24:16
   |
20 |     message N {
   |             - found possibly related symbol `test.M.N`
...
24 |         extend M.N {
   |                ^^^ not found in this scope
   |
   = note: Protobuf's name lookup rules expected a symbol `test.M.M.N`, rather
           than the one we found

encountered 1 error
